--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 setw -g mode-keys vi
 
 setw -g xterm-keys on
-set-option -g default-terminal "screen-256color"
+#set-option -g default-terminal "screen-256color"
 
 unbind-key j
 bind-key j select-pane -D
